; ModuleID = '/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetStencilTest.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetStencilTest.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPUREG_STENCIL_TEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GPU_SetStencilTest(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* @GPUREG_STENCIL_TEST, align 4
  %12 = load i32, i32* %6, align 4
  %13 = and i32 %12, 1
  %14 = load i32, i32* %7, align 4
  %15 = and i32 %14, 7
  %16 = shl i32 %15, 4
  %17 = or i32 %13, %16
  %18 = load i32, i32* %10, align 4
  %19 = shl i32 %18, 8
  %20 = or i32 %17, %19
  %21 = load i32, i32* %8, align 4
  %22 = shl i32 %21, 16
  %23 = or i32 %20, %22
  %24 = load i32, i32* %9, align 4
  %25 = shl i32 %24, 24
  %26 = or i32 %23, %25
  %27 = call i32 @GPUCMD_AddWrite(i32 %11, i32 %26)
  ret void
}

declare dso_local i32 @GPUCMD_AddWrite(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
